<resources>
    <string name="app_name">Togu Travel App</string>
    <string name="string_nama_lokasi">Nama Lokasi</string>
    <string name="harga_tiket">Harga Tiket :</string>
    <string name="rp_10_000_00">Rp.10.000,00</string>
    <string name="kategori">Kategori</string>
    <string name="wisata_alam">Wisata Alam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deskripsi_tempat_wisata">Deskripsi tempat wisata</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="lokasi_wisata">Lokasi wisata</string>
    <string name="title">Judul</string>
    <string name="lokasi">Lokasi</string>
    <string name="map">map</string>
    <string name="image_object">Image Object</string>
    <string name="button_play">Button Play</string>
    <string name="button_back">Button Back</string>
    <string name="descriptions">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="alamat">Museum Gatau, Jl. Jendral Sudirman No.52 Jakarta timur</string>
    <string name="gender">Gender</string>
    <string name="Ratting">9999</string>
    <string name="harga">Harga :</string>
    <string name="tarif_tourguide">Rp.100.000</string>
    <string name="tg_name">Nama</string>
    <string name="rating_star">rating Star</string>
    <string name="review_terbanyak">Review Terbanyak</string>
    <string name="termurah">Termurah</string>

    <string-array name="object_title">
        <item>Kitab Sutasoma</item>
        <item>Keris Sakti</item>
        <item>Meriam Cunny</item>
    </string-array>

    <string-array name="object_url">
        <item>https://asset.kompas.com/crops/DLt2cnTGpI9plhUbSfKRq71y_CM=/0x64:1080x784/750x500/data/photo/2021/05/05/60925ae243569.jpg</item>
        <item>https://www.bali-artshop.de/WebRoot/Store9/Shops/63684478/60BA/9B26/7254/E50C/4D18/0A0C/6D0B/5B39/1.jpg</item>
        <item>https://asset-a.grid.id/crop/0x0:0x0/700x465/photo/intisarifoto/original/62782_meriam-si-jagur-yang-ada-di-museum-nasional.jpg</item>
    </string-array>

    <string-array name="object_desc">
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</item>
    </string-array>

    <string-array name="recommend_title">
        <item>Hutan Pinus Cibubur</item>
        <item>Taman Balaikota</item>
        <item>Kebun Teh Cikabayan</item>
        <item>Hutan Pinus Cibubur</item>
        <item>Taman Balaikota</item>
        <item>Kebun Teh Cikabayan</item>
    </string-array>

    <string-array name="recommend_url">
        <item>https://lh3.googleusercontent.com/-bM01PvIm_qg/XygXlSd2UuI/AAAAAAAADdM/9L9pflAt37wIqRrtBL5vh8FLXs8hNElpgCLcBGAsYHQ/s1600/1596462984908326-0.png</item>
        <item>https://thumb.viva.co.id/media/frontend/thumbs3/2017/06/08/593929244d76f-taman-balai-kota-bandung_665_374.jpg</item>
        <item>https://i0.wp.com/piknikdong.com/wp-content/uploads/2019/08/Kebun-Teh-Rancabali-Bandung-1.jpg</item>
        <item>https://lh3.googleusercontent.com/-bM01PvIm_qg/XygXlSd2UuI/AAAAAAAADdM/9L9pflAt37wIqRrtBL5vh8FLXs8hNElpgCLcBGAsYHQ/s1600/1596462984908326-0.png</item>
        <item>https://thumb.viva.co.id/media/frontend/thumbs3/2017/06/08/593929244d76f-taman-balai-kota-bandung_665_374.jpg</item>
        <item>https://i0.wp.com/piknikdong.com/wp-content/uploads/2019/08/Kebun-Teh-Rancabali-Bandung-1.jpg</item>
    </string-array>

    <string-array name="recommend_desc">
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</item>
    </string-array>

    <string-array name="recommend_location">
        <item>Cibubur</item>
        <item>Balaikota</item>
        <item>Cikabayan</item>
        <item>Cibubur</item>
        <item>Balaikota</item>
        <item>Cikabayan</item>
    </string-array>

    <string-array name="recommend_price">
        <item>Rp.30.000,00</item>
        <item>Rp.15.000,00</item>
        <item>Rp.22.500,00</item>
        <item>Rp.30.000,00</item>
        <item>Rp.15.000,00</item>
        <item>Rp.22.500,00</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ketik_pesan">Ketik pesan...</string>
    <string name="kurang_dari_8">Kurang dari 8</string>
    <string name="scanning">Scanning...</string>
    <string name="scanningPros">QR Code tidak dikenali !</string>
    <string name="isi_data_dirimu_dibawah">Isi Data Dirimu dibawah!</string>
    <string name="titleSignup">Isi Data Dirimu Dibawah !</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="telp">Nomor Telepon</string>
    <string name="signup">Signup</string>
    <string name="sign_up_disini"><u>Sign Up disini!</u></string>
    <string name="konfirmasi">Konfirmasi Password Mu</string>
    <string name="cancel">Cancel</string>

    <string-array name="sort_by_range">
        <item>Terdekat</item>
        <item>Terjauh</item>
        <item>≤ 3km</item>
        <item>≤ 5km</item>
        <item>≤ 10km</item>
    </string-array>

    <string-array name="sort_by_price">
        <item>Termurah</item>
        <item>Termahal</item>
        <item>≤ Rp.15.000</item>
        <item>≤ Rp.50.000</item>
        <item>≤ Rp.100.000</item>
    </string-array>


    <string-array name="tgUrl">
        <item>https://static.bangkokpost.com/media/content/20200619/c1_1937552_200619122619.jpg</item>
        <item>https://d3itoy3ehuwt5n.cloudfront.net/wp-content/uploads/2014/07/jim-carrey.jpg?w=225</item>
        <item>https://i.pinimg.com/550x/76/3b/68/763b68021bed696a50b90759ffa63ce7.jpg</item>
        <item>https://static.fanpage.it/wp-content/uploads/sites/15/2021/11/BeFunky-paulrudd-1200x1200.jpg</item>
        <item>https://images.cm.archant.co.uk/resource/blob/7218316/1a44c41adf9182bbe32a08cfeb50e902/179635601-data.jpg</item>
        <item>https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/hbz-celeb-school-dropouts-johnny-depp-gettyimages-1061229344.jpg</item>
    </string-array>

    <string-array name="tgName">
        <item>Wanda.G</item>
        <item>Patrik.S</item>
        <item>Handy.M</item>
        <item>Dimas.R</item>
        <item>Woody.W</item>
        <item>Buzz.L</item>
    </string-array>

    <string-array name="tgGender">
        <item>Wanita</item>
        <item>Pria</item>
        <item>Pria</item>
        <item>Pria</item>
        <item>Pria</item>
        <item>Pria</item>
    </string-array>

    <string-array name="tgRating">
        <item>2498</item>
        <item>1024</item>
        <item>125</item>
        <item>135</item>
        <item>16</item>
        <item>613</item>
    </string-array>

    <string-array name="tgPrice">
        <item>Rp.150.000</item>
        <item>Rp.120.000</item>
        <item>Rp.80.000</item>
        <item>Rp.100.000</item>
        <item>Rp.50.000</item>
        <item>Rp.80.000</item>
    </string-array>
    <string name="title_activity_buttom_nav">ButtomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>