<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="173dp"
        android:layout_height="287dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/tg_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                android:src="@color/quantum_googblueA400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/tg_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tg_img" />

            <TextView
                android:id="@+id/tg_gen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/gender"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/tg_name"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/rating_star"
                app:layout_constraintStart_toEndOf="@+id/tg_rat"
                app:layout_constraintTop_toBottomOf="@+id/tg_gen"
                app:srcCompat="@drawable/ic_ratting" />

            <TextView
                android:id="@+id/tg_rat"
                android:layout_width="39dp"
                android:layout_height="21dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/Ratting"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tg_gen" />

            <TextView
                android:id="@+id/tg_price"
                android:layout_width="75dp"
                android:layout_height="21dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/tarif_tourguide"
                android:textColor="#36AE7C"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintStart_toEndOf="@+id/tg_3"
                app:layout_constraintTop_toBottomOf="@+id/tg_rat" />

            <TextView
                android:id="@+id/tg_3"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/harga"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.146"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tg_rat" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>