<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.fragment.OverviewFragment">

    <TextView
        android:id="@+id/location_detail_desc_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi_tempat_wisata"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/location_detail_desc"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_long"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/location_detail_desc_tag"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/location_detail_location_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lokasi_wisata"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/location_detail_desc"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/location_detail_location"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_long"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/location_detail_location_tag"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>