<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailLocationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/uppercard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="8dp"
            android:elevation="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/location_detail_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="35dp"
                tools:src="@tools:sample/avatars"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/location_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/string_nama_lokasi"
                app:layout_constraintStart_toEndOf="@id/location_detail_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/location_detail_addr"
                />

            <TextView
                android:id="@+id/location_detail_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/string_nama_lokasi"
                app:layout_constraintStart_toEndOf="@id/location_detail_image"
                app:layout_constraintTop_toBottomOf="@id/location_detail_name"
                app:layout_constraintBottom_toBottomOf="@id/location_detail_image"
                />

            <TextView
                android:id="@+id/location_detail_pricetag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="viewEnd"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/harga_tiket"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/location_detail_price"
                />

            <TextView
                android:id="@+id/location_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/rp_10_000_00"
                android:textColor="#36AE7C"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/location_detail_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_detail_pricetag" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/location_detail_mid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/uppercard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/location_detail_categorytag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/kategori"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/location_detail_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/wisata_alam"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_detail_categorytag"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/location_detail_list_image_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_detail_category" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/location_detail_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:tabIndicatorColor="#084b83"
            app:tabTextColor="#084b83"
            app:layout_constraintTop_toBottomOf="@id/location_detail_mid_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/constraint_container">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/location_detail_viewpager2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"/>

    </ScrollView>
</RelativeLayout>